[GR-14971] Non sandboxed IO operations in JavaScript.